--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -34,8 +34,8 @@ h1 {
 h2 {
 
   @include print {
-    font-size: 12pt;
-    margin: 0;
+    font-size: 9pt;
+    margin-bottom: $spacer-print * 2;
   }
 
   font-size: $h2-font-size;
