--- a/src/sass/mixins/_print.scss
+++ b/src/sass/mixins/_print.scss
@@ -1,5 +1,5 @@
 @mixin print {
-  @media print {
+  @media only print {
     @content;
   }
 }
