--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -30,6 +30,7 @@ $wrapper-max-widths: (
 );
 
 $spacer: 1.6rem;
+$spacer-print: 2pt;
 
 // body
 $body-bg: $color-grey-dark;
